...
          />
        ) : null}
        {onShare ? (
          <BottomDrawerItem
            icon="shareOutline"
            label={t('drive.fileMeta.share')}
            testID="action-share"
            disabled={!isOnline}
            onPress={() => drawer.run(() => onShare(folder))}
          />
        ) : null}
        {onRename ? (
          <BottomDrawerItem
...
