...
          }}
        />
        <Tabs.Screen
          name="shared"
          options={{
            title: t('drive.shares'),
            tabBarButtonTestID: 'tab-shared',
            tabBarBadge: formatBadgeCount(newSharesCount),
            tabBarBadgeStyle: {
              backgroundColor: theme.colors.error,
              color: theme.colors.onError
            },
            tabBarIcon: ({ color }) => (
...
